images and overlay text

--- a/about.html
+++ b/about.html
@@ -34,8 +34,11 @@
       </header>
 
     <main>
-        <img src="/resources/group.jpg" alt="Electrician Working" width="1150" height="500"/>
-        <h1>Mclifty</h1>
+        <div class="image-container">
+            <img src="/resources/group.jpg" alt="Electrician Working"/>
+            <div class="overlay-text">About Us</div>
+        </div>
+
         <h3>Why Choose Mclifty?</h3>
         <p>At Mclifty, we are dedicated to providing the best electrical services in the area. Our team of professionals are experienced and knowledgeable in all things electrical. We are committed to providing the best service to our customers. We are proud to be a part of the community and look forward to serving you.</p>
         <ul>
