--- a/commercial.html
+++ b/commercial.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Mclifty HTML</title>
-    <link rel="icon" href="/resources/mclifty_logo_1.png" style="border-radius: 50%;"/>
+    <link rel="icon" href="/resources/mclifty_logo_1.png"/>
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="index.css" />
 </head>
@@ -34,7 +34,11 @@
       </header>
 
     <main>
-        <img src="/resources/commercial.jpg" alt="Electrician Working" width="1150" height="500"/>
+        <div class="image-container">
+            <img src="/resources/commercial.jpg" alt="Electrician Working"/>
+            <div class="overlay-text">Commercial</div>
+        </div>
+
         <h1>Let Us Be The Solution to Your Commercial Electrical Needs</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero.</p>
         <button onclick="window.location.href='contact.html'">Contact</button>
