--- a/about.html
+++ b/about.html
@@ -81,6 +81,7 @@
                 <li>Email:</li>
                 <li>Address:</li>
                 <li><a href="contact.html"> Contact</a></li>
+                <li>© Copyright 2025 McLifty Electric. ALL RIGHTS RESERVED.</li>
             </ul>
         </div>
     </footer>
