fixed nav button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <body>
         <header class="container-fluid p-0">
-            <nav id="navid" class="navbar navbar-expand-md navbar-light bg-light">
+            <nav id="navid" class="navbar navbar-expand-md navbar-light bg-light justify-content-between">
                 <a id = "logo" href="index.html"><img src="/resources/mclifty_logo_1.JPG" alt="Mclifty Logo" width="65" height="65" style="border-radius: 50%"/></a>
                 <h3 id ="logo-text">McLifty Electric</h3>
             
