--- a/residential.html
+++ b/residential.html
@@ -16,8 +16,8 @@
             <nav class="navbar navbar-expand-md navbar-light bg-light">
                 <a id = "logo" href="index.html"><img src="/resources/mclifty_logo_1.JPG" alt="Mclifty Logo" width="65" height="65" style="border-radius: 50%"/></a>
                 <h3 id ="logo-text">McLifty Electric</h3>
-                
-            <button class="navbar-toggler navbar-expand-md" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+            <button id = "navbutton" class="navbar-toggler navbar-expand-md" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
         
