testing deployment to github pages

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <img src="/resources/yellow_man.webp" alt="Electrician Working"/>
                 <div class="overlay-text">Professional Electrical Work You Can Trust</div>
             </div>
+            <h1>test</h1>
             <h3>The Mclifty Experience</h3>
             <p>At Mclifty, we are dedicated to providing the best electrical services in the area. Our team of professionals are experienced and knowledgeable in all things electrical. We are committed to providing the best service to our customers. We are proud to be a part of the community and look forward to serving you.</p>
             <button onclick="window.location.href='contact.html'">Contact</button>
