--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header class="container-fluid p-0">
             <nav id="navid" class="navbar navbar-expand-md navbar-light bg-light justify-content-between">
                 <a id = "logo" href="index.html"><img src="/resources/mclifty_logo_1.JPG" alt="Mclifty Logo" width="65" height="65" style="border-radius: 50%"/></a>
-                <a href="index.html"><h3 id ="logo-text">McLifty Electric</h3></a>
+                <a id ="logo-text" href="index.html"><h3>McLifty Electric</h3></a>
             
             <button id = "navbutton" class="navbar-toggler navbar-expand-md" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
