button and centered text'

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
                 <img src="/resources/yellow_man.webp" alt="Electrician Working"/>
                 <div class="overlay-text">Professional Electrical Work You Can Trust</div>
             </div>
-            <h3>The Mclifty Experience</h3>
+            <h1>The Mclifty Experience</h1>
             <p>At Mclifty, we are dedicated to providing the best electrical services in the area. Our team of professionals are experienced and knowledgeable in all things electrical. We are committed to providing the best service to our customers. We are proud to be a part of the community and look forward to serving you.</p>
-            <button onclick="window.location.href='contact.html'">Contact</button>
+            <button id="yellow-button" onclick="window.location.href='contact.html'">Contact</button>
             <h3>What services do we offer?</h3>
             <h5>Residential</h5>
             <h5>LED Lights</h5>
             <h5>Commercial</h5>
             <hr />
 
-            <img src="/resources/led.jpg" alt="Map of Utah" width="700" height="450"/>
+            <img src="/resources/led.jpg" alt="led lights" width="700" height="450"/>
             <h5>LED Lights</h5>
             <p>LED lights are a great way to save energy and money. They are more efficient than traditional incandescent bulbs and last longer. We can help you install LED lights in your home or business. Contact us today to learn more.</p>
 
