--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <title>Mclifty HTML</title>
         <link rel="icon" href="/resources/mclifty_logo_1.png" style="border-radius: 50%;"/>
         <link rel="stylesheet" href="main.css" />
@@ -40,16 +41,29 @@
                 <div class="overlay-text">Professional Electrical Work You Can Trust</div>
             </div>
             <h1>The Mclifty Experience</h1>
-            <p>At Mclifty, we are dedicated to providing the best electrical services in the area. Our team of professionals are experienced and knowledgeable in all things electrical. We are committed to providing the best service to our customers. We are proud to be a part of the community and look forward to serving you.</p>
+            <p>At Mclifty, we are dedicated to providing the best electrical services in the area. Our team of professionals are experienced and knowledgeable in all things electrical. We are committed to providing the best service to our customers, and we hope you choose us to be the solution to your electrical needs.</p>
             <button id="yellow-button" onclick="window.location.href='contact.html'">Contact</button>
             <h3>What services do we offer?</h3>
-            <h5>Residential</h5>
-            <h5>LED Lights</h5>
-            <h5>Commercial</h5>
-            <hr />
+            <div id="icons">
+                <a href="residential.html"><div class = "icon-container">
+                    <i class="fas fa-home"></i>
+                    <span>Residential</span> 
+                    </div>
+                </a>
+                <a href="#LED"><div class = "icon-container">
+                    <i class="fas fa-lightbulb"></i>
+                    <span>LED Lights</span> 
+                    </div>
+                </a>
+                <a href="commercial.html"><div class = "icon-container">
+                    <i class="fas fa-building"></i>
+                    <span>Commercial</span> 
+                    </div>
+                </a>
+            </div>
 
             <img src="/resources/led.jpg" alt="led lights" width="700" height="450"/>
-            <h5>LED Lights</h5>
+            <h5 id="LED">LED Lights</h5>
             <p>LED lights are a great way to save energy and money. They are more efficient than traditional incandescent bulbs and last longer. We can help you install LED lights in your home or business. Contact us today to learn more.</p>
 
             <ul>
