--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=home" />
         <title>Mclifty HTML</title>
         <link rel="icon" href="/resources/mclifty_logo_1.png" style="border-radius: 50%;"/>
         <link rel="stylesheet" href="main.css" />
@@ -46,17 +47,19 @@
             <h3>What services do we offer?</h3>
             <div id="icons">
                 <a href="residential.html"><div class = "icon-container">
-                    <i class="fas fa-home"></i>
+                    <i id ="house-icon" class="material-symbols-outlined">
+                        home
+                    </i>
                     <span>Residential</span> 
                     </div>
                 </a>
                 <a href="#LED"><div class = "icon-container">
-                    <i class="fas fa-lightbulb"></i>
+                    <i class="fa-regular fa-lightbulb"></i>
                     <span>LED Lights</span> 
                     </div>
                 </a>
                 <a href="commercial.html"><div class = "icon-container">
-                    <i class="fas fa-building"></i>
+                    <i class="fa-regular fa-building"></i>
                     <span>Commercial</span> 
                     </div>
                 </a>
