--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=home" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
         <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
         <title>Mclifty HTML</title>
         <link rel="icon" href="/resources/mclifty_logo_1.png" style="border-radius: 50%;"/>
@@ -45,20 +45,28 @@
             <h1>The Mclifty Experience</h1>
             <p>At Mclifty, we are dedicated to providing the best electrical services in the area. Our team of professionals are experienced and knowledgeable in all things electrical. We are committed to providing the best service to our customers, and we hope you choose us to be the solution to your electrical needs.</p>
             <button id="yellow-button" onclick="window.location.href='contact.html'">Contact</button>
-            <h3>What services do we offer?</h3>
+            <h3 id="services">What services do we offer?</h3>
             <div id="icons">
                 <a href="residential.html"><div class = "icon-container">
-                    <i id ="house-icon" class="material-symbols-outlined">
+                    <i id="house-icon" class="material-symbols-outlined">
                         home
                     </i>
                     <span>Residential</span> 
                     </div>
                 </a>
+                <span id="lightning" class="material-symbols-outlined">
+                    electric_bolt
+                    </span>
+                <!-- <i class="fa-solid fa-bolt"></i> -->
                 <a href="#LED"><div class = "icon-container">
                     <i class="fa-regular fa-lightbulb"></i>
                     <span>LED Lights</span> 
                     </div>
                 </a>
+                <span id="lightning" class="material-symbols-outlined">
+                    electric_bolt
+                    </span>
+                <!-- <i class="fa-solid fa-bolt"></i> -->
                 <a href="commercial.html"><div class = "icon-container">
                     <i class="fa-regular fa-building"></i>
                     <span>Commercial</span> 
