--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
                 <div class="overlay-text">Professional Electrical Work You Can Trust</div>
             </div>
             <h1>The Mclifty Experience</h1>
-            <p>At Mclifty, we are dedicated to providing the best electrical services in the area. Our team of professionals are experienced and knowledgeable in all things electrical. We are committed to providing the best service to our customers, and we hope you choose us to be the solution to your electrical needs.</p>
+            <p>The McLifty Experience is more than just electrical work—it’s a transformation. 
+                We specialize in top-tier LED installations and comprehensive electrical solutions for both residential and commercial clients. 
+                Whether you're upgrading to energy-efficient lighting, need a wiring overhaul, or require expert electrical repairs, our skilled team ensures safe, reliable, and high-quality workmanship. 
+                With McLifty, you’re not just getting service—you’re getting a smarter, more efficient future for your home or business.</p>
             <button id="yellow-button" onclick="window.location.href='contact.html'">Contact</button>
             <h3 id="services">What services do we offer?</h3>
             <div id="icons">
@@ -74,18 +77,21 @@
                 </a>
             </div>
 
-            <img src="/resources/led.jpg" alt="led lights" width="700" height="450"/>
-            <h5 id="LED">LED Lights</h5>
-            <p>LED lights are a great way to save energy and money. They are more efficient than traditional incandescent bulbs and last longer. We can help you install LED lights in your home or business. Contact us today to learn more.</p>
-
-            <ul>
-                <li>Save energy</li>
-                <li>Save money</li>
-                <li>Long lasting</li>
-                <li>Tax Benefits</li>
-                <li>Environmentally Friendly</li>
-            </ul>
-            <hr />
+            <div id="LED">
+                <div id="led-text"> 
+                    <h5>Why LED Lights?</h5>
+                    <p>Upgrade your business with our premium LED lighting solutions and experience the perfect blend of efficiency, cost savings, and modern aesthetics. 
+                        Our expertly installed LEDs cut energy costs by up to 75%, require minimal maintenance, and enhance your workspace with brighter, more natural lighting that boosts productivity and customer appeal. 
+                        Plus, with a lifespan of over 50,000 hours, you'll enjoy years of worry-free illumination. Make the smart investment today—let us transform your business with high-quality LED lighting!</p>
+                    <ul>
+                        <li>Up To 75% Less Energy Used</li>
+                        <li>Lasts 50,000+ Hours, That's 25 Times Longer Than Regular Bulbs</li>
+                        <li>Brighter More Natural Light</li>
+                        <li>Eco-Friendly, Less of a Carbon Footprint and No Toxic Materials</li>
+                    </ul>   
+                </div>
+                <img id="led-pic" src="/resources/led.jpg" alt="led lights"/>
+            </div>
 
             <img src="/resources/map.png" alt="Map of Utah" width="700" height="450"/>
             <h5>Locations Serviceable</h5>
