--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <li>Eco-Friendly, Less of a Carbon Footprint and No Toxic Materials</li>
                     </ul>   
                 </div>
-                <img id="led-pic" src="/resources/led.jpg" alt="led lights"/>
+                <img id="led-pic" src="/resources/LED.jpg" alt="led lights"/>
             </div>
 
             <img src="/resources/map.png" alt="Map of Utah" width="700" height="450"/>
