fixed zoom on map

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 
         <script>
-            var map = L.map('map').setView([40.3916, -111.8508], 10); // Center on Salt Lake City
+            var map = L.map('map').setView([40.3916, -111.8508], 9);
           
             // Add the OpenStreetMap tile layer
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
