fixed led bullets

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                         Our expertly installed LEDs cut energy costs by up to 75%, require minimal maintenance, and enhance your workspace with brighter, more natural lighting that boosts productivity and customer appeal. 
                         Plus, with a lifespan of over 50,000 hours, you'll enjoy years of worry-free illumination. Make the smart investment today—let us transform your business with high-quality LED lighting!</p>
                     <ul>
-                        <li>Up To 75% Less Energy Used</li>
-                        <li>Lasts 50,000+ Hours, That's 25 Times Longer Than Regular Bulbs</li>
-                        <li>Brighter More Natural Light</li>
-                        <li>Eco-Friendly, Less of a Carbon Footprint and No Toxic Materials</li>
+                        <li>Up to 75% less energy used!</li>
+                        <li>Lasts 25 times longer than regular bulbs!</li>
+                        <li>Brighter and more natural light!</li>
+                        <li>No toxic material and less of a carbon footprint!</li>
                     </ul>   
                 </div>
                 <img id="led-pic" src="/resources/LED.jpg" alt="led lights"/>
