--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         <title>Mclifty HTML</title>
         <link rel="icon" href="/resources/mclifty_logo_1.png" style="border-radius: 50%;"/>
         <link rel="stylesheet" href="main.css" />
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="about.css" />
     </head>
 
     <body>
