--- a/residential.html
+++ b/residential.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
         <title>Mclifty HTML</title>
         <link rel="icon" href="/resources/mclifty_logo_1.png" style="border-radius: 50%;"/>
         <link rel="stylesheet" href="main.css" />
@@ -93,7 +94,6 @@
         <script>
             var map = L.map('map').setView([40.3916, -111.8508], 9);
           
-            // Add the OpenStreetMap tile layer
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
               attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
             }).addTo(map);
@@ -111,7 +111,7 @@
             var provoMarker = L.marker([40.2338, -111.6585]).addTo(map);
 
 
-            provoMarker.bindPopup("Based Out Of Provo").openPopup();
+            provoMarker.bindPopup("Based out of Provo, UT").openPopup();
         </script>
 
     </body>
