--- a/commercial.html
+++ b/commercial.html
@@ -69,7 +69,7 @@
             <div id="map-container">
                 <h3>We are proud to serve all of Utah and Salt Lake County!</h3>
                 <div id="map" style="height: 400px; width: 100%;"></div>
-                <p>If you live in Utah or Salt Lake County or close by send us a message or call us today!</p>
+                <p>If you live in Utah or Salt Lake County or close by send us a message or call us <a href="contact.html">today!</a</p>
             </div>
 
         </main>    
