--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                 <img src="/resources/mclifty_logo_1.png" alt="Mclifty Logo" width="65" height="65" style="border-radius: 50%;"/>
                 <ul style="list-style-type: none;">
                     <li id = "phone">Phone: 555-555-5555</li>
-                    <li>Email:</li>
+                    <li>Email: matthew.baker@mclifty.com</li>
                     <li>Address:</li>
                     <li><a href="contact.html"> Contact</a></li>
                     <li>© Copyright 2025 McLifty Electric. ALL RIGHTS RESERVED.</li>
