added call and email buttons

--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,9 @@
 
         <main>
             <h1>Call Text or Email Us</h1>
-            <h3>Phone: 555-555-5555</h3>
-            <h3>Email:mclifty@gmail.com</h3>
-            <h3>Address: Springville</h3>
+            <h3>Phone: <a href="tel:+14352510358" id="call-button">(435)-251-0358</a></h3>
+            <h3>Email: <a href="mailto:jordanwjohns@gmail.com" id="email-button">jordanwjohns@gmail.com</a></h3>
+            <h3>Address: Provo, Ut</h3>
 
             <h1>Send Us a Message</h1>
 
