--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
 
-            <form action="https://formsubmit.co/your@email.com" method="POST">
+            <form action="https://formsubmit.co/jordanwjohns@gmail.com" method="POST">
                 <input type="text" name="name" required>
                 <input type="email" name="email" required>
                 <button type="submit">Send</button>
