--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <title>Mclifty HTML</title>
         <link rel="icon" href="/resources/mclifty_logo_1.png" style="border-radius: 50%;"/>
         <link rel="stylesheet" href="main.css" />
@@ -38,9 +39,18 @@
             <div id="contact-box">
                 <div id="contact-info">
                     <h1>Call Text or Email Us</h1>
-                    <h3>Phone: <a href="tel:+14352510358" id="call-button">(435)-251-0358</a></h3>
-                    <h3>Email: <a href="mailto:jordanwjohns@gmail.com" id="email-button">jordanwjohns@gmail.com</a></h3>
-                    <h3>Address: Provo, Ut</h3>
+                    <h3>Phone (Call or Text)</h3>
+                    <i class="fa-solid fa-phone"></i>
+                    <a href="tel:+14352510358" id="call-button">(435)-251-0358</a>
+
+                    <h3>Email</h3>
+                    <i class="fa-solid fa-envelope"></i>
+                    <a href="mailto:jordanwjohns@gmail.com" id="email-button">jordanwjohns@gmail.com</a>
+
+                    <h3>Address</h3>
+                    <i class="fa-solid fa-map-pin"></i>
+                    <a id="address-button" href="https://www.google.com/maps?q=Provo,Utah" target="_blank">Provo, UT</a>
+
                 </div>
     
                 <div id="contact-form-box">
