--- a/about.html
+++ b/about.html
@@ -41,7 +41,10 @@
             </div>
 
             <h1>Why Choose Mclifty?</h1>
-            <p>At Mclifty, we are dedicated to providing the best electrical services in the area. Our team of professionals are experienced and knowledgeable in all things electrical. We are committed to providing the best service to our customers. We are proud to be a part of the community and look forward to serving you.</p>
+            <p>McLifty is committed to providing top-quality service with transparent pricing and no hidden fees. 
+                Our team is reliable, professional, and dedicated to ensuring your satisfaction from start to finish. 
+                As a locally owned and operated business, we take pride in serving our community with honesty and excellence. 
+                We look forward to serving you!</p>
             <ul>
                 <li>Set Pricing and Free Quote</li>
                 <li>Reliable and Professional</li>
@@ -80,7 +83,7 @@
                 <ul style="list-style-type: none;">
                     <li id = "phone">Phone: 555-555-5555</li>
                     <li>Email: matthew.baker@mclifty.com</li>
-                    <li>Address:</li>
+                    <li>Address: Provo, UT</li>
                     <li><a href="contact.html"> Contact</a></li>
                     <li>© Copyright 2025 McLifty Electric. ALL RIGHTS RESERVED.</li>
                 </ul>
