--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
                 <ul style="list-style-type: none;">
                     <li id = "phone">Phone: 555-555-5555</li>
                     <li>Email: matthew.baker@mclifty.com</li>
-                    <li>Address:</li>
+                    <li>Address: Provo, UT</li>
                     <li><a href="contact.html"> Contact</a></li>
                     <li>© Copyright 2025 McLifty Electric. ALL RIGHTS RESERVED.</li>
                 </ul>
