--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <title>Mclifty HTML</title>
         <link rel="icon" href="/resources/mclifty_logo_1.png" style="border-radius: 50%;"/>
@@ -45,16 +46,29 @@
                 Our team is reliable, professional, and dedicated to ensuring your satisfaction from start to finish. 
                 As a locally owned and operated business, we take pride in serving our community with honesty and excellence. 
                 We look forward to serving you!</p>
-            <ul>
-                <li>Set Pricing and Free Quote</li>
-                <li>Reliable and Professional</li>
-                <li>Locally Owned and Operated</li>
-            </ul>
 
-            <hr />
-            <h6>Contact us now for your free quote!</h6>
-            <button onclick="window.location.href='contact.html'">Contact</button>
-            <hr />
+            <div id="icons">
+                <div class = "icon-container">
+                    <i class="fa-solid fa-dollar-sign"></i>
+
+                    <span>Set Pricing and Free Quote</span> 
+                </div>
+
+                <div class = "icon-container">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Reliable and Professional</span> 
+                </div>
+
+                <div class = "icon-container">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <span>Locally Owned and Operated</span> 
+                </div>
+            </div>
+
+            <div id="blue-strip">
+                <span>Contact us now for your free quote!</span>
+                <button id="yellow-button" onclick="window.location.href='contact.html'">Contact</button>
+            </div>
 
             <h5>Who We Are</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero.</p>
