writing in about statements

--- a/about.html
+++ b/about.html
@@ -70,15 +70,21 @@
                 <button id="yellow-button" onclick="window.location.href='contact.html'">Contact</button>
             </div>
 
-            <h5>Who We Are</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero.</p>
+            <div id="bio-states">
+                <h4>Who We Are</h4>
+                <p>Mclifty is a locally owned and operated electrical service company dedicated to quality and reliability. 
+                    With decades of combined experience, we have built a reputation for delivering expert craftsmanship and outstanding customer service. 
+                    Our team takes pride in providing solutions that are both efficient and tailored to your specific needs.</p>
+                <h4>Why We Started</h4>
+                <p>After spending years in big electrical companies, Matt realized something was missing: genuine customer care and quality workmanship. 
+                    That’s why he founded Mclifty: to bring a more personal, transparent, and high-quality approach to electrical services. 
+                    Today, Mclifty continues to grow, trusted by homeowners and businesses alike.</p>
+                <h4>Our Mission</h4>
+                <p>At Mclifty, our mission is simple: provide high-quality electrical services with integrity and professionalism. 
+                    We believe in treating every project with the care and attention it deserves, ensuring our customers receive the best possible experience. 
+                    Your satisfaction and safety are our top priorities.</p>
+            </div>
 
-            <h5>Why We Started</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero.</p>
-
-            <h5>Our Mission</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra.</p>
-        
             <img src="/resources/matt.jpg" alt="Matt Baker" width="700" height="450"/>
             <h2>Matt Baker</h2>
             <h6>Owner/Master Electrician</h6>
