writing for Matt

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
             </div>
 
             <h1>Why Choose Mclifty?</h1>
-            <p>McLifty is committed to providing top-quality service with transparent pricing and no hidden fees. 
+            <p id="first-p">McLifty is committed to providing top-quality service with transparent pricing and no hidden fees. 
                 Our team is reliable, professional, and dedicated to ensuring your satisfaction from start to finish. 
                 As a locally owned and operated business, we take pride in serving our community with honesty and excellence. 
                 We look forward to serving you!</p>
@@ -85,11 +85,15 @@
                     Your satisfaction and safety are our top priorities.</p>
             </div>
 
-            <img src="/resources/matt.jpg" alt="Matt Baker" width="700" height="450"/>
-            <h2>Matt Baker</h2>
-            <h6>Owner/Master Electrician</h6>
-            <p>Matt has been an electrician for over 20 years. He is a master electrician and has worked on a variety of projects. He is dedicated to providing the best service to his customers and is committed to excellence.</p>
-            <hr />
+            <div id="matt-div">
+                <img id="matt-pic" src="/resources/matt.jpg" alt="Matt Baker"/>
+                <div id="matt-text">
+                    <h2>Matt Baker</h2>
+                    <h5>Owner/Master Electrician</h5>
+                    <p>Matt has been an electrician for over 20 years. He is a master electrician and has worked on a variety of projects. 
+                    He is dedicated to providing the best service to his customers and is committed to excellence.</p>
+                </div>
+            </div>
 
             <h2>BYU</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero.</p>
