--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="overlay-text">Professional Electrical Work You Can Trust</div>
             </div>
             <h1>The Mclifty Experience</h1>
-            <p>The McLifty Experience is more than just electrical work—it’s a transformation. 
+            <p id="first-p">The McLifty Experience is more than just electrical work—it’s a transformation. 
                 We specialize in top-tier LED installations and comprehensive electrical solutions for both residential and commercial clients. 
                 Whether you're upgrading to energy-efficient lighting, need a wiring overhaul, or require expert electrical repairs, our skilled team ensures safe, reliable, and high-quality workmanship. 
                 With McLifty, you’re not just getting service—you’re getting a smarter, more efficient future for your home or business.</p>
