fixed footer top margin and byu div

--- a/about.html
+++ b/about.html
@@ -95,9 +95,14 @@
                 </div>
             </div>
 
-            <h2>BYU</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero.</p>
-            <img src="/resources/byu.jpg" alt="BYU" width="700" height="450"/>
+            <div id="byu-div">
+                <div id="byu-text">
+                    <h2>BYU</h2>
+                    <p>BYU is a great school. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. 
+                    In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero.</p>
+                </div>
+                <img id="byu-pic" src="/resources/byu.jpg" alt="BYU"/>
+            </div>
         
         </main>    
         
