--- a/residential.html
+++ b/residential.html
@@ -43,7 +43,7 @@
 
             <h1>From Remodeling to New Construction We Have You Covered</h1>
             <p id="first-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero.</p>
-            <button onclick="window.location.href='contact.html'">Contact</button>
+            <button id="yellow-button" onclick="window.location.href='contact.html'">Contact</button>
             <hr />
 
             <h5>New Construction</h5>
