--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <img src="/resources/yellow_man.webp" alt="Electrician Working"/>
                 <div class="overlay-text">Professional Electrical Work You Can Trust</div>
             </div>
-            <h1>The Mclifty Experience</h1>
+            <h2>The Mclifty Experience</h2>
             <p id="first-p">The McLifty Experience is more than just electrical work—it’s a transformation. 
                 We specialize in top-tier LED installations and comprehensive electrical solutions for both residential and commercial clients. 
                 Whether you're upgrading to energy-efficient lighting, need a wiring overhaul, or require expert electrical repairs, our skilled team ensures safe, reliable, and high-quality workmanship. 
@@ -116,7 +116,12 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 
         <script>
-            var map = L.map('map').setView([40.3916, -111.8508], 9);
+            var map = L.map('map', {
+                center: [40.4183, -111.7830], // Set your initial coordinates
+                zoom: 9, // Set initial zoom level
+                minZoom: 9, // Prevent zooming out too far
+                maxZoom: 18 // Optional: Prevent zooming in too far
+            });
           
 
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -132,6 +137,14 @@
             //   .then(data => {
             //     L.geoJSON(data).addTo(map); // Add the GeoJSON data to the map
             //   });
+
+            var bounds = L.latLngBounds(
+                L.latLng(40.2, -111.85), // Southwest corner
+                L.latLng(40.52, -111.72)  // Northeast corner
+            );
+
+            // Apply the bounding box to restrict panning
+            map.setMaxBounds(bounds);
 
             var provoMarker = L.marker([40.2338, -111.6585]).addTo(map);
 
