fixed map scrolling error

--- a/commercial.html
+++ b/commercial.html
@@ -96,7 +96,8 @@
                 center: [40.4183, -111.7830], 
                 zoom: 9,
                 minZoom: 9,
-                maxZoom: 18 
+                maxZoom: 18,
+                scrollWheelZoom: false
             });
           
 
