--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                 center: [40.4183, -111.7830], // Set your initial coordinates
                 zoom: 9, // Set initial zoom level
                 minZoom: 9, // Prevent zooming out too far
-                maxZoom: 18 // Optional: Prevent zooming in too far
+                maxZoom: 18, // Optional: Prevent zooming in too far
+                scrollWheelZoom: false
             });
           
 
