--- a/commercial.html
+++ b/commercial.html
@@ -42,7 +42,10 @@
             </div>
 
             <h2>Let Us Be The Solution to Your Commercial Electrical Needs</h2>
-            <p id="first-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero.</p>
+            <p id="first-p">From office buildings to retail spaces, we provide comprehensive commercial electrical services that keep your business running smoothly. 
+                Whether you need new construction wiring, electrical system upgrades, or regular maintenance, our skilled team ensures safety, efficiency, and minimal downtime. 
+                We understand the importance of reliable electrical systems for your operations, and we're dedicated to delivering solutions that meet your unique business needs. 
+                With our expertise and attention to detail, you can focus on growing your business while we handle the electrical work.</p>
             <button id="yellow-button" onclick="window.location.href='contact.html'">Contact</button>
             <hr />
 
