--- a/residential.html
+++ b/residential.html
@@ -37,12 +37,14 @@
 
         <main>
             <div class="image-container">
-                <img src="/resources/residential.jpg" alt="Residential Houses"/>
+                <img src="/resources/house.jpg" alt="Residential Houses"/>
                 <div class="overlay-text">Residential</div>
             </div>
 
-            <h2>From Remodeling to New Construction We Have You Covered</h2>
-            <p id="first-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero.</p>
+            <h2>Trust Us For All Of Your Residential Electrical Needs</h2>
+            <p id="first-p">Whether you need a simple repair, a full home rewiring, or new installations, our expert electricians are here to provide safe, reliable, and high-quality service. 
+                We specialize in everything from lighting upgrades and panel replacements to outlet and switch installations, ensuring your home is powered efficiently and securely. 
+                With a commitment to excellence and customer satisfaction, we’re the trusted choice for all your residential electrical needs.</p>
             <button id="yellow-button" onclick="window.location.href='contact.html'">Contact</button>
             <hr />
 
