--- a/about.html
+++ b/about.html
@@ -72,13 +72,12 @@
 
             <div id="bio-states">
                 <h4>Who We Are</h4>
-                <p>Mclifty is a locally owned and operated electrical service company dedicated to quality and reliability. 
+                <p>McLifty is a trusted electrical service provider committed to quality and reliability based out of Provo Utah. 
                     With decades of combined experience, we have built a reputation for delivering expert craftsmanship and outstanding customer service. 
                     Our team takes pride in providing solutions that are both efficient and tailored to your specific needs.</p>
                 <h4>Why We Started</h4>
-                <p>After spending years in big electrical companies, Matt realized something was missing: genuine customer care and quality workmanship. 
-                    That’s why he founded Mclifty: to bring a more personal, transparent, and high-quality approach to electrical services. 
-                    Today, Mclifty continues to grow, trusted by homeowners and businesses alike.</p>
+                <p>Mclifty was founded to provide a more personalized, transparent, and high-quality approach to electrical services. 
+                    With a focus on genuine customer care and exceptional workmanship, Mclifty has quickly gained the trust of homeowners and businesses alike, and continues to grow with a commitment to excellence.</p>
                 <h4>Our Mission</h4>
                 <p>At Mclifty, our mission is simple: provide high-quality electrical services with integrity and professionalism. 
                     We believe in treating every project with the care and attention it deserves, ensuring our customers receive the best possible experience. 
