about page updates

--- a/about.html
+++ b/about.html
@@ -97,8 +97,9 @@
             <div id="byu-div">
                 <div id="byu-text">
                     <h2>BYU</h2>
-                    <p>BYU is a great school. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. 
-                    In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero.</p>
+                    <p>McLifty Electric is a trusted contractor for Brigham Young University (BYU), providing electrical services to many of the university's buildings across its campus. 
+                        Out team of skilled electricians is responsible for routine maintenance, repairs, and the installation of electrical infrastructure in a variety of campus facilities, from classrooms, lecture halls, and labs to the Wilkinson Student Center and various athletic complexes. 
+                        The partnership between McLifty Electric and BYU reflects a long-standing commitment to integrity and reliability.</p>
                 </div>
                 <img id="byu-pic" src="/resources/byu.jpg" alt="BYU"/>
             </div>
