change in headlines for residential and commercial

--- a/residential.html
+++ b/residential.html
@@ -41,7 +41,7 @@
                 <div class="overlay-text">Residential</div>
             </div>
 
-            <h2>Trust Us For All Of Your Residential Electrical Needs</h2>
+            <h2>Reliable Home Electrical Services</h2>
             <p id="first-p">Whether you need a simple repair, a full home rewiring, or new installations, our expert electricians are here to provide safe, reliable, and high-quality service. 
                 We specialize in everything from lighting upgrades and panel replacements to outlet and switch installations, ensuring your home is powered efficiently and securely. 
                 With a commitment to excellence and customer satisfaction, we’re the trusted choice for all your residential electrical needs.</p>
