--- a/residential.html
+++ b/residential.html
@@ -116,9 +116,7 @@
 
             var provoMarker = L.marker([40.2338, -111.6585]).addTo(map);
 
-            if (window.innerWidth <= 768) {
-                map.zoomControl.setPosition('bottomright');
-            }
+            map.zoomControl.setPosition('bottomleft');
 
 
             provoMarker.bindPopup("Based out of Provo, UT").openPopup();
