--- a/commercial.html
+++ b/commercial.html
@@ -42,7 +42,7 @@
                 <div class="overlay-text">Commercial</div>
             </div>
 
-            <h2>Expert Electrical Solutions for Businesses</h2>
+            <h2>Professional Electrical Care</h2>
             <p id="first-p">From office buildings to retail spaces, we provide comprehensive commercial electrical services that keep your business running smoothly. 
                 Whether you need new construction wiring, electrical system upgrades, or regular maintenance, our skilled team ensures safety, efficiency, and minimal downtime. 
                 We understand the importance of reliable electrical systems for your operations, and we're dedicated to delivering solutions that meet your unique business needs. 
