--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
                     </div>
                 </a>
             </div>
+            <span id="LED"></span>
 
-            <div id="LED">
+            <div id="led-container">
                 <div id="led-text"> 
                     <h5>Why LED Lights?</h5>
                     <p>Upgrade your business with our premium LED lighting solutions and experience the perfect blend of efficiency, cost savings, and modern aesthetics. 
