--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
             </div>
 
             <div id="blue-strip">
-                <span>Contact us now for your free quote!</span>
+                <span>Contact us now to get started!</span>
                 <button id="yellow-button" onclick="window.location.href='contact.html'">Contact</button>
             </div>
 
@@ -89,8 +89,8 @@
                 <div id="matt-text">
                     <h2>Matt Baker</h2>
                     <h5>Owner/Master Electrician</h5>
-                    <p>Matt has been an electrician for over 20 years. He is a master electrician and has worked on a variety of projects. 
-                    He is dedicated to providing the best service to his customers and is committed to excellence.</p>
+                    <p>Matt is a master electrician with over 20 years of experience across a wide range of projects. 
+                        His commitment to excellence and dedication to delivering top-tier service ensures that every job meets the highest standards of quality and customer satisfaction.</p>
                 </div>
             </div>
 
