changed to uniform we statements in services offered

--- a/commercial.html
+++ b/commercial.html
@@ -63,7 +63,7 @@
                     <div class="service-category">
                         <i class="fa-solid fa-lightbulb"></i>
                         <h3>Lighting Solutions</h3>
-                        <p>Our team designs and installs energy-efficient lighting systems for commercial spaces, including office buildings, retail stores, and parking lots. We ensure your lighting is functional and cost-effective.</p>
+                        <p>We design and install energy-efficient lighting systems for commercial spaces, including office buildings, retail stores, and parking lots. We ensure your lighting is functional and cost-effective.</p>
                     </div>
 
                     <div class="service-category">
