--- a/residential.html
+++ b/residential.html
@@ -74,7 +74,7 @@
                     <div class="service-category">
                         <i class="fa-solid fa-magnifying-glass"></i>
                         <h3>Home Electrical Safety Inspections</h3>
-                        <p>Our safety inspections ensure your electrical systems are up to code and functioning properly. We identify potential hazards like outdated wiring and recommend necessary repairs or upgrades.</p>
+                        <p>We perform safety inspections which ensure your electrical systems are up to code and functioning properly. We identify potential hazards like outdated wiring and recommend necessary repairs or upgrades.</p>
                     </div>
 
                     <div class="service-category">
