--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
         <main>
             <div class="image-container">
-                <img src="/resources/group.jpg" alt="Electrician Working"/>
+                <img src="/resources/team.webp" alt="Mclifty Team"/>
                 <div class="overlay-text">About Us</div>
             </div>
 
@@ -85,7 +85,7 @@
             </div>
 
             <div id="matt-div">
-                <img id="matt-pic" src="/resources/matt.jpg" alt="Matt Baker"/>
+                <img id="matt-pic" src="/resources/matt.webp" alt="Matt Baker"/>
                 <div id="matt-text">
                     <h2>Matt Baker</h2>
                     <h5>Owner/Master Electrician</h5>
