--- a/commercial.html
+++ b/commercial.html
@@ -38,7 +38,7 @@
 
         <main>
             <div class="image-container">
-                <img src="/resources/commercial.jpg" alt="Electrician Working"/>
+                <img src="/resources/commercial.webp" alt="Electrician Working"/>
                 <div class="overlay-text">Commercial</div>
             </div>
 
