--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
         <main>
             <div class="image-container">
-                <img src="/resources/team.webp" alt="Mclifty Team"/>
+                <img src="/resources/teambig.webp" alt="Mclifty Team"/>
                 <div class="overlay-text">About Us</div>
             </div>
 
