--- a/residential.html
+++ b/residential.html
@@ -38,7 +38,7 @@
 
         <main>
             <div class="image-container">
-                <img src="/resources/house.webp" alt="Residential Houses"/>
+                <img src="/resources/house2.webp" alt="Residential Houses"/>
                 <div class="overlay-text">Residential</div>
             </div>
 
