--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <li>No toxic material and less of a carbon footprint!</li>
                     </ul>   
                 </div>
-                <img id="led-pic" src="/resources/LED.jpg" alt="led lights"/>
+                <img id="led-pic" src="/resources/LED.webp" alt="led lights"/>
             </div>
 
             <div id="map-container">
